# rust-rts-sensor-actuator

./: .gitignore  CORE_REQUIREMENTS_VERIFICATION.md  Cargo.toml  DASHBOARD_EXPLANATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_TEST.ps1  TESTING_GUIDE.md  async_results.csv  threaded_results.csv
configs/: experiment_contention.toml  experiment_stress.toml
crates/async_impl/: Cargo.toml
crates/async_impl/src/: actuator.rs  lib.rs  sensor.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  dashboard.rs  diagnostics.rs  lib.rs  metrics.rs  pid.rs  sync_strategies.rs
crates/threaded_impl/: Cargo.toml
crates/threaded_impl/src/: actuator.rs  lib.rs  sensor.rs
src/: main.rs  menu.rs
