[package]
name = "real-time-sensor-actuator"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "crates/common" }
threaded_impl = { path = "crates/threaded_impl" }
async_impl = { path = "crates/async_impl" }
tokio = { version = "1.0", features = ["full"] }

[workspace]
members = [
    "crates/common",
    "crates/threaded_impl",
    "crates/async_impl",
    "bin/benchmark_runner",
    "bin/visualiser",
]

resolver = "2"
